--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         python-version: '3.x'
         architecture: 'x64'
-    - run: pip install -t . /require && python ./main.py
+    - run: pip install -t . require && python ./main.py
 
     env:
       APP_ID: ${{ secrets.APP_ID }}
