--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,10 @@ jobs:
       with:
         python-version: '3.x'
         architecture: 'x64'
-    - run: pip install -r ./requirements.txt && python ./main.py
+    # - run: 
+      -run:
+        python -m pip install --upgrade pip
+        pip3 install -r requirements.txt
 
     env:
       APP_ID: ${{ secrets.APP_ID }}
