--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,11 @@ jobs:
       with:
         python-version: '3.x'
         architecture: 'x64'
-    # - run: 
+    # - run: pip install -r ./requirements.txt && python ./main.py
       -run:
-        python -m pip install --upgrade pip
-        pip3 install -r requirements.txt
-
+      python -m pip install --upgrade pip
+      pip3 install -r requirements.txt
+      python3 main.py
     env:
       APP_ID: ${{ secrets.APP_ID }}
       APP_SECRET: ${{ secrets.APP_SECRET }}
