--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       -run:
       python -m pip install --upgrade pip
       pip3 install -r requirements.txt
-      python3 main.py
+      python main.py
     env:
       APP_ID: ${{ secrets.APP_ID }}
       APP_SECRET: ${{ secrets.APP_SECRET }}
