--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,9 @@ jobs:
     # - run: pip install -r ./requirements.txt && python ./main.py
       -run:
       python -m pip install --upgrade pip
-      pip3 install -r requirements.txt
-      python main.py
+      pip3 install -r requirements.txt && python main.py
+      
+
     env:
       APP_ID: ${{ secrets.APP_ID }}
       APP_SECRET: ${{ secrets.APP_SECRET }}
