--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,10 @@ jobs:
         python-version: '3.x'
         architecture: 'x64'
     # - run: pip install -r ./requirements.txt && python ./main.py
-      -run:
+    - run:
       python -m pip install --upgrade pip
-      pip3 install -r requirements.txt && python main.py
+      pip3 install -r requirements.txt 
+      python main.py
       
 
     env:
